--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "test": "test"
   },
   "devDependencies": {
-    "karma": "~0.13",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "karma-chrome-launcher": "^0.2.2",
     "body-parser": "^1.7.0",
     "express": "^4.8.8",
     "gulp": "^3.8.7",
-    "jstransformer-uglify-js": "latest",
-    "gulp-util": "^3.0.1",
-    "gulp-sass": "latest",
-    "gulp-csso": "latest",
-    "gulp-uglify": "^1.0.1",
-    "gulp-jade": "latest",
-    "gulp-concat": "^2.3.4",
     "gulp-autoprefixer": "latest",
-    "gulp-rename": "latest",
+    "gulp-concat": "^2.3.4",
+    "gulp-csso": "latest",
+    "gulp-jade": "latest",
     "gulp-livereload": "latest",
-    "tiny-lr": "latest",
-    "marked": "latest"
+    "gulp-rename": "latest",
+    "gulp-sass": "latest",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "jasmine-core": "^2.4.1",
+    "jstransformer-uglify-js": "latest",
+    "karma": "~0.13",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "marked": "latest",
+    "phantomjs": "^2.1.7",
+    "tiny-lr": "latest"
   },
   "scripts": {
     "test": "karma start ./test/karma.conf.js",
